--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<div class="container">
+    <div class="login-container">
+        <h4>Login</h4>
+        <div class="input-fields">
+            <label for="username" class="form-label">Username:</label>
+            <input type="text" id="username" class="form-control" placeholder="Enter your username">
+            <label for="password" class="form-label">Password:</label>
+            <input type="password" class="form-control" id="password" placeholder="Enter your password">
+        </div>
+        <button class="btn bg-success text-white w-50 mt-3" (click)="login()">Login</button>
+    </div>
+</div>
