--- a/src/app/patient-details/patient-details.component.scss
+++ b/src/app/patient-details/patient-details.component.scss
@@ -11,3 +11,34 @@ cdk-virtual-scroll-viewport{
     height: 600px; /* Adjust as needed */
     overflow: auto;
 }
+
+
+
+body {
+    background-color: #f8f9fa; /* Light background */
+}
+
+.card {
+    border: 1px solid #28a745; /* Green border */
+}
+
+.table {
+    margin-top: 20px;
+}
+
+.patient-details .row >*{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.col-md-4{
+    padding: 10px;
+}
+.row h5{
+    padding: 0;
+    margin: 5px 0;
+}
+.row > * h5:nth-child(2){
+    font-weight: 300;
+    margin-left: 5px;
+}
