--- a/src/app/patient-details/patient-details.component.html
+++ b/src/app/patient-details/patient-details.component.html
@@ -71,43 +71,43 @@
                   <div class="row">
                       <div class="col-md-4">
                           <h5>Name:</h5>  
-                          <h5>{{ patient?.Name}}</h5>
+                          <h5>{{ patient?.name}}</h5>
                       </div>
                       <div class="col-md-4">
                           <h5>Age:</h5> 
-                          <h5>{{ patient?.Age }}</h5>
+                          <h5>{{ patient?.age }}</h5>
                       </div>
                       <div class="col-md-4">
                           <h5>Phone:</h5> 
-                          <h5>{{ patient?.PhoneNumber }}</h5>
+                          <h5>{{ patient?.phoneNumber }}</h5>
                       </div>
                   </div>
                   <div class="row">
                       <div class="col-md-4">
                           <h5>Address:</h5> 
-                          <h5>{{ patient?.Address }}</h5>
+                          <h5>{{ patient?.address }}</h5>
                       </div>
                       <div class="col-md-4">
                           <h5>Gender:</h5> 
-                          <h5>{{ patient?.Gender }}</h5>
+                          <h5>{{ patient?.gender }}</h5>
                       </div>
                       <div class="col-md-4">
                           <h5>Surgery History:</h5> 
-                          <h5>{{ patient?.SurgeryHistory }}</h5>
+                          <h5>{{ patient?.surgeryHistory }}</h5>
                       </div>
                   </div>
                   <div class="row">
                       <div class="col-md-4">
                           <h5>Previous History:</h5> 
-                          <h5>{{ patient?.PreviousHistory }}</h5>
+                          <h5>{{ patient?.previousHistory }}</h5>
                       </div>
                       <div class="col-md-4">
                           <h5>Symptoms:</h5> 
-                          <h5>{{ patient?.Symptoms }}</h5>
+                          <h5>{{ patient?.symptoms }}</h5>
                       </div>
                       <div class="col-md-4">
                           <h5>Complaints:</h5> 
-                          <h5>{{ patient?.Complaints }}</h5>
+                          <h5>{{ patient?.complaints }}</h5>
                       </div>
                   </div>
               </div>
