--- a/src/app/update-page/update-page.component.html
+++ b/src/app/update-page/update-page.component.html
@@ -19,15 +19,15 @@
     <div class="search-details row mt-5">
         <div class="col-md-4 name">
             <h5>Name:</h5>
-            <h5>{{patient?.Name}}</h5>
+            <h5>{{patient?.name}}</h5>
         </div>
         <div class="col-md-4 age">
             <h5>Age:</h5>
-            <h5>{{patient?.Age}}</h5>
+            <h5>{{patient?.age}}</h5>
         </div>
         <div class="col-md-4 phonenumber">
             <h5>Phone number:</h5>
-            <h5>{{patient?.PhoneNumber}}</h5>
+            <h5>{{patient?.phoneNumber}}</h5>
         </div>
     </div>
 
