--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" *ngIf="!isLoginpage()">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/home">PMS</a>
+      <img src="/assets/logo.png" alt="" style="width: 50px;height: auto;">
+      <a class="navbar-brand ms-2" routerLink="/home">PMS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
