--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,26 +1,88 @@
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+.container-fluid {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  background: url("/src/assets/login.jpg") no-repeat center center / cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.login-container{
-    width: 100%;
-    max-width: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 30px;
-    border: 1px solid green;
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-.input-fields{
-    width: 100%;
+
+.main-section {
+  background-color: var(--login-color);
+  z-index: 2;
+  width: 95%;
+  max-width: 1000px;
 }
-label{
-    width: 100%;
+.main-section .col-md-6:nth-child(1) {
+  background-color: var(--login-color);
+  color: white;
 }
-input{
-    width: 100%;
-    margin-bottom: 15px;
+.main-section .col-md-6:nth-child(2) {
+  background-color: white;
+  border-radius: 26px 0 0 26px;
+  padding: 0 10px;
+}
+
+.logo {
+  margin-bottom: 30px;
+}
+.logo img {
+  width: 100px;
+  height: 100px;
+}
+.main-section h1 {
+  font-size: 28px;
+}
+.main-section p {
+  font-size: 14px;
+  text-align: justify;
+}
+.help svg{
+    width: 30px;
+    height: 30px;
+}
+
+
+.login-container {
+  z-index: 2; /* Make sure the login form is above the overlay */
+  width: 100%;
+}
+
+.login-container .img {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 16px;
+}
+
+.login-container img {
+  width: 150px;
+  height: auto;
+}
+
+.login-container h4 {
+  font-size: 24px;
+  margin: 16px 0;
+}
+.input-fields {
+  width: 100%;
+  margin: 16px 0;
+}
+label {
+  font-size: 16px;
+  color: gray;
+  width: 100%;
+}
+input {
+  width: 100%;
+  margin-bottom: 15px;
 }
