--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,53 @@
-<div class="container">
-    <div class="login-container">
-        <h4>Login</h4>
-        <div class="input-fields">
-            <label for="username" class="form-label">Username:</label>
-            <input type="text" id="username" class="form-control" placeholder="Enter your username">
-            <label for="password" class="form-label">Password:</label>
-            <input type="password" class="form-control" id="password" placeholder="Enter your password">
+<div class="container-fluid w-100"
+    style="background: url('/assets/login.jpg') no-repeat center center / cover; height: 100vh;">
+    <div class="overlay"></div>
+    <div class="row main-section">
+        <div class="col-md-6 p-3 p-md-5 d-none d-md-flex flex-column justify-content-between">
+            <div class="content">
+                <div class="logo">
+                    <img src="/assets/logo.png" alt="">
+                </div>
+
+                <h1 class="mb-2">Welcome to Your Health Portal</h1>
+                <p>Log in to manage appointments, view treatment history, and access personalized wellness plans. Your
+                    path
+                    to well-being begins here.</p>
+            </div>
+            <div class="help w-100 d-flex align-items-center justify-content-start" title="Contact us +918344288188">
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M12 19.5C16.1421 19.5 19.5 16.1421 19.5 12C19.5 7.85786 16.1421 4.5 12 4.5C7.85786 4.5 4.5 7.85786 4.5 12C4.5 16.1421 7.85786 19.5 12 19.5ZM12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM12.75 15V16.5H11.25V15H12.75ZM10.5 10.4318C10.5 9.66263 11.1497 9 12 9C12.8503 9 13.5 9.66263 13.5 10.4318C13.5 10.739 13.3151 11.1031 12.9076 11.5159C12.5126 11.9161 12.0104 12.2593 11.5928 12.5292L11.25 12.7509V14.25H12.75V13.5623C13.1312 13.303 13.5828 12.9671 13.9752 12.5696C14.4818 12.0564 15 11.3296 15 10.4318C15 8.79103 13.6349 7.5 12 7.5C10.3651 7.5 9 8.79103 9 10.4318H10.5Z"
+                            fill="#ffffff"></path>
+                    </g>
+                </svg>
+                <h6 class="p-0 m-0">For help</h6>
+            </div>
         </div>
-        <button class="btn bg-success text-white w-50 mt-3" (click)="login()">Login</button>
+        <form (ngSubmit)="login()" class="col-md-6  p-3 p-md-5">
+            <div class="login-container">
+                <div class="img">
+                    <img src="/assets/login-logo.svg" alt="">
+                </div>
+                <h4>Welcome Back</h4>
+                <p class="mb-3" style="color: gray;">Login to your account then access your personalized dashboard and
+                    stay connected
+                    with your healthcare journey.</p>
+                <div class="input-fields">
+                    <label for="username" class="form-label">Username:</label>
+                    <input type="text" id="username" class="form-control" placeholder="Enter your username"
+                        [(ngModel)]="userName" required>
+                    <label for="password" class="form-label">Password:</label>
+                    <input type="password" class="form-control" id="password" placeholder="Enter your password"
+                        [(ngModel)]="password" required>
+                </div>
+                <div class="login-button d-flex justify-content-center">
+                    <button type="submit" class="btn bg-success text-white w-50 mt-4">Login</button>
+                </div>
+                <p class="text-sm-center text-danger" *ngIf="errorMessage.length>0">{{errorMessage}}</p>
+            </div>
+        </form>
     </div>
 </div>
