--- a/src/app/update-page/update-page.component.html
+++ b/src/app/update-page/update-page.component.html
@@ -15,19 +15,28 @@
         </div>
     </div>
     <p class="search-result" *ngIf="searchResult.length>0">{{searchResult}}</p>
-    <div class="search-details row mt-5">
-        <div class="col-md-4 name">
-            <h5>Name:</h5>
-            <h5>{{patient?.name}}</h5>
-        </div>
-        <div class="col-md-4 age">
-            <h5>Age:</h5>
-            <h5>{{patient?.age}}</h5>
-        </div>
-        <div class="col-md-4 phonenumber">
-            <h5>Phone number:</h5>
-            <h5>{{patient?.phoneNumber}}</h5>
-        </div>
+    <div class="row mt-5">
+        <table class="table table-bordered w-100 patients-list">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Phone number</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let patient of patients">
+                    <td>{{patient.patientId}}</td>
+                    <td>{{patient.name}}</td>
+                    <td>{{patient.age}}</td>
+                    <td>{{patient.phoneNumber}}</td>
+                    <td><button class="btn btn-primary w-50" (click)="selectedUser(patient.patientId,patient.clinicPlace)">Select</button></td>
+                </tr>
+            </tbody>
+        </table>
+
     </div>
 
     <div class="row mt-5">
