--- a/src/app/update-page/update-page.component.scss
+++ b/src/app/update-page/update-page.component.scss
@@ -18,3 +18,12 @@
 .update label{
     margin: 10px 0;
 }
+
+.patients-list td{
+    text-align: center;
+}
+
+.patients-list th{
+    text-align: center;
+    height: auto;
+}
