--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid p-2">
     <div class="row patients-count m-md-3 p-md-3 p-2 g-5 m-0">
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <div class="row mb-5 g-5">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="small-card">
                         <img src="/assets/total-patients.svg" alt="">
                         <div class="content">
@@ -11,7 +11,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="small-card">
                         <img src="/assets/total-clinic.svg" alt="">
                         <div class="content">
@@ -23,7 +23,7 @@
             </div>
             <h4 class="fw-medium text-success mb-4">Patient's Count By Clinic</h4>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <table class="table table-bordered w-100">
                         <thead>
                             <tr>
@@ -39,7 +39,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="pieChart d-flex justify-content-center" style="height: 350px;">
                         <canvas id="pie-chart">
                         </canvas>
@@ -47,9 +47,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <div class="row mb-5 g-5">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="small-card">
                         <img src="/assets/last-week.svg" alt="">
                         <div class="content">
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="small-card">
                         <img src="/assets/last-month.svg" alt="">
                         <div class="content">
